--- a/app/src/main/res/layout/activity_save_goods.xml
+++ b/app/src/main/res/layout/activity_save_goods.xml
@@ -6,15 +6,109 @@
     android:layout_height="match_parent"
     tools:context=".Goods.SaveGoods">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/namege"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:textSize="30dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/namegood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Enter your goods" />
+
+            <EditText
+                android:id="@+id/priceofGoods"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="pric" />
+
+            <EditText
+                android:id="@+id/countofcods"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Count" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:layout_marginLeft="40dp"
+                android:src="@drawable/ic_baseline_add_circle_24"
+                android:onClick="insert"
+                 />
+
+
+        </LinearLayout>
+
+
+        <TableLayout
+            android:id="@+id/tableofgoods"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:background="@android:color/white">
+
+            <TableRow android:background="@color/colorAccent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="Goods"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="price"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="count"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="16dp" />
+
+
+            </TableRow>
+
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent">
+                 <ListView
+                     android:id="@+id/userthings"
+                     android:layout_width="match_parent">
+                 </ListView>
 
 
 
+        </TableLayout>
 
 
-
-
-
-
+    </LinearLayout>
 
 
 </RelativeLayout>
