--- a/app/src/main/res/layout/activity_save_goods.xml
+++ b/app/src/main/res/layout/activity_save_goods.xml
@@ -36,11 +36,13 @@
                 android:id="@+id/priceofGoods"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:hint="pric" />
 
             <EditText
                 android:id="@+id/countofcods"
                 android:layout_width="wrap_content"
+                android:inputType="number"
                 android:layout_height="wrap_content"
                 android:hint="Count" />
 
@@ -108,7 +110,16 @@
         </TableLayout>
 
 
+
     </LinearLayout>
 
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_check_24"
+        android:layout_alignParentBottom="true"
+        android:onClick="saveData"
+
+        />
 
 </RelativeLayout>
