--- a/app/src/main/res/layout/table_adpter.xml
+++ b/app/src/main/res/layout/table_adpter.xml
@@ -6,9 +6,10 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
         android:gravity="center">
 
-        <EditText
+        <TextView
             android:id="@+id/nameofgooda"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -17,7 +18,7 @@
             android:text="count"
             android:textColor="@android:color/background_dark"
             />
-        <EditText
+        <TextView
             android:id="@+id/pricofgooda"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -26,7 +27,7 @@
             android:text="count"
             android:textColor="@android:color/background_dark"
             />
-        <EditText
+        <TextView
             android:id="@+id/acountofgooda"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
