--- a/app/src/main/res/layout/activity_main_sale_and_pay.xml
+++ b/app/src/main/res/layout/activity_main_sale_and_pay.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/priceofGoodk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:hint="pric" />
 
             <EditText
@@ -93,7 +93,7 @@
                 android:id="@+id/countofkaufk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:hint="Count" />
 
             <ImageButton
@@ -168,6 +168,27 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/wins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_trending_down_24"/>
+        <ImageButton
+            android:id="@+id/Debt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_menu_book_24"/>
+
+
+    </LinearLayout>
 
 
 </RelativeLayout>
