--- a/app/src/main/res/layout/activity_save_goods.xml
+++ b/app/src/main/res/layout/activity_save_goods.xml
@@ -42,7 +42,7 @@
             <EditText
                 android:id="@+id/countofcods"
                 android:layout_width="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:layout_height="wrap_content"
                 android:hint="Count" />
 
